logos and colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="columbia_blue">#B2FCFB</color>
+    <color name="Crow_blue">#102E44</color>
 </resources>
