--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,6 @@
     </style>
 
     <style name="Theme.CarRentPro" parent="Base.Theme.CarRentPro" />
+    <style name="SplashScreenTheme" parent="Theme.AppCompat.NoActionBar"/>
+
 </resources>
