--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="columbia_blue">#B2FCFB</color>
     <color name="Crow_blue">#102E44</color>
+    <color name="gray">#A9A9A9</color>
 </resources>
